--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
   <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <!-- <script src="p5.min.js"></script>
+  <script src="p5.min.js"></script>
+  <script src="p5.asciiart.min.js"></script>
   <script src="p5.sound.min.js"></script>
-  <script src="sketch.js"></script> -->
+  <script src="sketch.js"></script>
 </head>
 <body>
   <div class="container">
-    <section><h1>Creative Coding 2020</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </section>
     <section>
       <h2>Lessons</h2>
       <ul id="lessons"></ul>
