--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
   <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <script src="p5.min.js"></script>
   <script src="p5.asciiart.min.js"></script>
@@ -13,11 +14,17 @@
 <body>
   <div class="container">
     <section>
-      <h2>Lessons</h2>
-      <ul id="lessons"></ul>
+      <h1>Draw With Code: Creative Coding (5th edition)</h1>
+      <p>Coding made fun! Learn to design interactive and unexpected experiences for screens of all sizes in this elective course at Politecnico di Milano, Design School. The course is open to all Communication Design students, both enrolled in a bachelor and in a master program.</p>
     </section>
     <section>
-      <h2>Assignments</h2>
+      <h4>Lessons</h4>
+      <ul id="lessons"></ul>
+    </section>
+  </div>
+  <div class="container-fluid">
+    <section>
+      <h4>Assignments</h4>
       <div id="assignments"></div>
     </section>
   </div>
