--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <ul id="lessons"></ul>
     </section>
   </div>
-  <div class="container-fluid">
+  <!-- <div class="container-fluid">
     <section>
       <h4>Assignments</h4>
       <div id="assignments"></div>
     </section>
-  </div>
+  </div> -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
