--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
   <link rel="stylesheet" href="style.css">
   <script src="p5.min.js"></script>
   <script src="p5.asciiart.min.js"></script>
-  <script src="p5.sound.min.js"></script>
+  <!-- <script src="p5.sound.min.js"></script> -->
   <script src="sketch.js"></script>
 </head>
 <body>
   <div class="container">
-    <section>
-      <h1>Draw With Code: Creative Coding (5th edition)</h1>
-      <p>Coding made fun! Learn to design interactive and unexpected experiences for screens of all sizes in this elective course at Politecnico di Milano, Design School. The course is open to all Communication Design students, both enrolled in a bachelor and in a master program.</p>
+    <section class="row">
+      <div class="col-12">
+        <h1>Draw With Code: Creative Coding (5th edition)</h1>
+        <p>Coding made fun! Learn to design interactive and unexpected experiences for screens of all sizes in this elective course at Politecnico di Milano, Design School. The course is open to all Communication Design students, both enrolled in a bachelor and in a master program.</p>
+      </div>
     </section>
+    <div class="row">
+      <div class="col-12" id="navigation"></div>
+    </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="script.js" type="text/javascript"></script>
+  <script src="navigation.js" type="text/javascript"></script>
+  <!-- <script src="script.js" type="text/javascript"></script> -->
 </body>
 </html>
