--- a/team-projects.html
+++ b/team-projects.html
@@ -2,16 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <title>Draw with Code 2020</title>
-  
+	<meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+	<title>Draw with Code 2020</title>
+
   <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
-  <script src="./p5.min.js"></script>
-  <script src="./p5.asciiart.min.js"></script>
-  <!-- <script src="./p5.sound.min.js"></script> -->
-  <script src="./sketch.js"></script>
+	<link rel="stylesheet" href="style.css">
+	
+	<!-- for Background -->
+  <script src="p5.min.js"></script>
+  <script src="p5.asciiart.min.js"></script>
+  <!-- <script src="p5.sound.min.js"></script> -->
+	<script src="sketch.js"></script>
+	
 </head>
 <body>
   <div class="container d-flex flex-column justify-content-between">
@@ -19,16 +22,20 @@
     <div id="navigation"></div>
     <div class="row">
       <div class="col-12 my-5">
-        <h4>Lessons</h4>
-        <ul id="lessons"></ul>
+        <h4>Team Projects</h4>
+        <ul id="team-projects">Coming Soon</ul>
       </div>
     </div>
     <div id="footer"></div>
-  </div>
+	</div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="./components.js" type="text/javascript"></script>
-  <script src="lessons.js" type="text/javascript"></script>
+	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.1.0/papaparse.min.js"></script>
+	<script src="./components.js" type="text/javascript"></script>
+
+	<script type="text/javascript">
+		 console.log('Add prjects')
+
+	</script>
 </body>
 </html>
