--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <title>Draw with Code 2020</title>
-  
-  <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <script src="p5.min.js"></script>
-  <script src="p5.asciiart.min.js"></script>
-  <!-- <script src="p5.sound.min.js"></script> -->
-  <script src="sketch.js"></script>
-</head>
-<body>
-  <div class="container d-flex flex-column justify-content-between">
-    <div id="intro"></div>
-    <div id="navigation"></div>
-    <div id="footer"></div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="components.js" type="text/javascript"></script>
-  <!-- <script src="script.js" type="text/javascript"></script> -->
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+    <title>Draw with Code 2020</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <script src="p5.min.js"></script>
+    <script src="p5.asciiart.min.js"></script>
+    <!-- <script src="p5.sound.min.js"></script> -->
+    <script src="sketch.js"></script>
+  </head>
+  <body>
+    <div class="container d-flex flex-column justify-content-between">
+      <div id="intro"></div>
+      <div id="navigation"></div>
+      <div id="footer"></div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="./components.js" type="text/javascript"></script>
+  </body>
 </html>
