--- a/assignments.html
+++ b/assignments.html
@@ -1,106 +1,161 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Draw with Code 2020</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Draw with Code 2020</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.css">
-	
-	<!-- for Background -->
-  <script src="p5.min.js"></script>
-  <script src="p5.asciiart.min.js"></script>
-  <!-- <script src="p5.sound.min.js"></script> -->
-	<script src="sketch.js"></script>
-	
-</head>
-<body>
-	<div class="container d-flex flex-column justify-content-between">
-    <div id="intro"></div>
-    <div id="navigation"></div>
-    <div class="row">
-      <div class="col-12 my-5">
-        <h4 id="click-to-sort">Assignments</h4>
-      <ul id="assignments" class="d-flex flex-column"></ul>
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- for Background -->
+    <script src="p5.min.js"></script>
+    <script src="p5.asciiart.min.js"></script>
+    <!-- <script src="p5.sound.min.js"></script> -->
+    <script src="sketch.js"></script>
+  </head>
+  <body>
+    <div class="container d-flex flex-column justify-content-between">
+      <div id="intro"></div>
+      <div id="navigation"></div>
+      <div class="row">
+        <div class="col-12 my-5">
+          <h4 id="click-to-sort">Assignments</h4>
+          <ul id="assignments" class="d-flex flex-column"></ul>
+        </div>
       </div>
+      <div id="footer"></div>
     </div>
-    <div id="footer"></div>
-	</div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://d3js.org/d3.v5.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.1.0/papaparse.min.js"></script>
-	<script src="./components.js" type="text/javascript"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.1.0/papaparse.min.js"
+    ></script>
+    <script src="./components.js" type="text/javascript"></script>
 
-	<script type="text/javascript">
-		const corsProxy = 'https://api.allorigins.win/raw?url=';
-		const dataUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTf_LLsUlurJ2ALeU7W8-73BdCV8og_cTbrav7uDBvQiygOarETHAgqSYYVVr7y3Itk1AJSzOBz74g1/pub?output=csv';
+    <script type="text/javascript">
+      const corsProxy = "https://api.allorigins.win/raw?url=";
+      const dataUrl =
+        "https://docs.google.com/spreadsheets/d/e/2PACX-1vTf_LLsUlurJ2ALeU7W8-73BdCV8og_cTbrav7uDBvQiygOarETHAgqSYYVVr7y3Itk1AJSzOBz74g1/pub?output=csv";
 
-		let randomOrder=true;
-		d3.csv(corsProxy+dataUrl).then(data=>{
-			// shuffle array, have different student at the top at each page loading
-			data = data.map((d,i)=>{
-				d.alphabeticalIndex=i;
-				return d;
-			}).sort(() => Math.random() - 0.5)
+      let randomOrder = true;
+      d3.csv(corsProxy + dataUrl).then((data) => {
+        // shuffle array, have different student at the top at each page loading
+        data = data
+          .map((d, i) => {
+            d.alphabeticalIndex = i;
+            return d;
+          })
+          .sort(() => Math.random() - 0.5);
 
-			let student = d3.select('#assignments').selectAll('li')
-				.data(data, (d,i)=>{
-					d.randomIndex=i;
-					return 'id-'+d['github-username']
-				})
-				.join('li')
-				.classed('student',true)
-				.style('order',d=>d.randomIndex)
+        let student = d3
+          .select("#assignments")
+          .selectAll("li")
+          .data(data, (d, i) => {
+            d.randomIndex = i;
+            return "id-" + d["github-username"];
+          })
+          .join("li")
+          .classed("student", true)
+          .style("order", (d) => d.randomIndex);
 
-			student.append('div')
-				.classed('m-0', true)
-				.style('width','300px')
-				.style('max-width','50%')
-				.text(d=>d['surname-name'])
+        student
+          .append("div")
+          .classed("m-0", true)
+          .style("width", "300px")
+          .style("max-width", "50%")
+          .text((d) => d["surname-name"]);
 
-			let assignment = student.append('ul')
-					.classed('assignments-list m-0',true)
-					.selectAll('li')
-					.data(d=>{
-						let keys = Object.keys(d).filter(key=>key!=='surname-name'&&key!=='github-username'&&key!=='alphabeticalIndex'&&key!=='randomIndex');
-						let mappedKeys = keys.map(k=>({label:[k],repo:d[k]}))
-						return mappedKeys
-					}, id=>'ass-'+id)
-					.join('li')
-					.classed('assignment',true)
+        let assignment = student
+          .append("ul")
+          .classed("assignments-list m-0", true)
+          .selectAll("li")
+          .data(
+            (d) => {
+              let keys = Object.keys(d).filter(
+                (key) =>
+                  key !== "surname-name" &&
+                  key !== "github-username" &&
+                  key !== "alphabeticalIndex" &&
+                  key !== "randomIndex"
+              );
+              let mappedKeys = keys.map((k) => ({
+                label: [k],
+                repo: d[k],
+                username: d["github-username"],
+              }));
+              return mappedKeys;
+            },
+            (id) => "ass-" + id
+          )
+          .join("li")
+          .classed("assignment", true);
 
-			assignment.append('div')
-				.classed('preview',true)
-				.style('background-image', function(e) {
-					const bg_img = e.repo?`url("https://raw.githubusercontent.com/drawwithcode/${e.repo}/master/cover.png")`:'url("https://via.placeholder.com/150x150/eae5ab/000?text=Coming Soon")'
-					return bg_img;
-				})
-				.style('cursor',d=>d.repo?'pointer':'default')
-				.on('click',(d)=>{
-					if (d.repo) {
-						const win = window.open('https://drawwithcode.github.io/'+d.repo, '_blank');
-						win.focus();
-					}
-				})
-			
-			assignment.append('a')
-				.attr('href',d=>d.repo?'https://github.com/drawwithcode/'+d.repo:null)
-				.attr('target','_blank')
-				.text(d=>'<repo/>')
+        assignment
+          .append("div")
+          .classed("preview", true)
+          .style("background-image", function (d) {
+            let bg_img = "";
+            if (d.label[0] == "Collaborative Drawing" && d.repo) {
+              bg_img = `url("https://raw.githubusercontent.com/drawwithcode/2020-05-${d.username}/master/cover.png")`;
+            } else if (d.repo) {
+              bg_img = `url("https://raw.githubusercontent.com/drawwithcode/${d.repo}/master/cover.png")`;
+            } else {
+              bg_img =
+                'url("https://via.placeholder.com/150x150/eae5ab/000?text=Coming Soon")';
+            }
+            return bg_img;
+          })
+          .style("cursor", (d) => (d.repo ? "pointer" : "default"))
+          .on("click", (d) => {
+            if (d.label[0] == "Collaborative Drawing" && d.repo) {
+              const win = window.open(d.repo, "_blank");
+              win.focus();
+            } else if (d.repo) {
+              const win = window.open(
+                "https://drawwithcode.github.io/" + d.repo,
+                "_blank"
+              );
+              win.focus();
+            }
+          });
 
-			// assignment.append('a')
-			// 	.attr('href',d=>d.repo?'https://drawwithcode.github.io/'+d.repo:'')
-			// 	.attr('target','_blank')
-			// 	.text(d=>'GH-page')
-			
-			d3.select('#click-to-sort').on('click',()=>{
-				randomOrder = !randomOrder;
-				student = student.style('order',d=>randomOrder?d.randomIndex:d.alphabeticalIndex)				
-			})
-		})
+        assignment
+          .append("a")
+          .attr("href", (d) =>
+            d.label[0] == "Collaborative Drawing"
+              ? "https://github.com/drawwithcode/2020-05-" + d.username
+              : d.repo
+              ? "https://github.com/drawwithcode/" + d.repo
+              : null
+          )
+          .attr("target", "_blank")
+          .text((d) => "<repo/>");
 
-	</script>
-</body>
+        d3.select("#click-to-sort").on("click", () => {
+          randomOrder = !randomOrder;
+          student = student.style("order", (d) =>
+            randomOrder ? d.randomIndex : d.alphabeticalIndex
+          );
+        });
+      });
+    </script>
+  </body>
 </html>
