--- a/team-projects.html
+++ b/team-projects.html
@@ -8,13 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
-	
+
 	<!-- for Background -->
   <script src="p5.min.js"></script>
   <script src="p5.asciiart.min.js"></script>
   <!-- <script src="p5.sound.min.js"></script> -->
 	<script src="sketch.js"></script>
-	
+
 </head>
 <body>
   <div class="container d-flex flex-column justify-content-between">
@@ -23,7 +23,7 @@
     <div class="row">
       <div class="col-12 my-5">
         <h4>Team Projects</h4>
-        <ul id="team-projects">Coming Soon</ul>
+        <ul id="team-projects"></ul>
       </div>
     </div>
     <div id="footer"></div>
@@ -33,9 +33,6 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.1.0/papaparse.min.js"></script>
 	<script src="./components.js" type="text/javascript"></script>
 
-	<script type="text/javascript">
-		 console.log('Add prjects')
-
-	</script>
+	<script src="team-projects.js" type="text/javascript"></script>
 </body>
 </html>
