--- a/team-projects.html
+++ b/team-projects.html
@@ -3,7 +3,23 @@
 <head>
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Draw with Code 2020</title>
+  <title>Team Projects - Draw with Code 2020 - DensityDesign Lab</title>
+  <meta name="title" content="Draw with Code 2020 - DensityDesign Lab">
+  <meta name="description" content="Designerly ways of coding, computationally ways of designing. A Creative Coding course at Polimi.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://drawwithcode.github.io/2020/">
+  <meta property="og:title" content="Draw with Code 2020 - DensityDesign Lab">
+  <meta property="og:description" content="Designerly ways of coding, computationally ways of designing. A Creative Coding course at Polimi.">
+  <meta property="og:image" content="">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://drawwithcode.github.io/2020/">
+  <meta property="twitter:title" content="Draw with Code 2020 - DensityDesign Lab">
+  <meta property="twitter:description" content="Designerly ways of coding, computationally ways of designing. A Creative Coding course at Polimi.">
+  <meta property="twitter:image" content="og-image.png">
 
   <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
