--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="twitter:url" content="https://drawwithcode.github.io/2020/">
     <meta property="twitter:title" content="Draw with Code 2020 - DensityDesign Lab">
     <meta property="twitter:description" content="Designerly ways of coding, computationally ways of designing. A Creative Coding course at Polimi.">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/drawwithcode/2020/master/og-image.png">
 
     <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
