--- a/assignments.html
+++ b/assignments.html
@@ -22,7 +22,7 @@
     <meta property="twitter:url" content="https://drawwithcode.github.io/2020/">
     <meta property="twitter:title" content="Draw with Code 2020 - DensityDesign Lab">
     <meta property="twitter:description" content="Designerly ways of coding, computationally ways of designing. A Creative Coding course at Polimi.">
-    <meta property="twitter:image" content="og-image.png">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/drawwithcode/2020/master/og-image.png">
 
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap"
