--- a/team-projects.html
+++ b/team-projects.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="https://drawwithcode.github.io/2020/">
   <meta property="og:title" content="Draw with Code 2020 - DensityDesign Lab">
   <meta property="og:description" content="Designerly ways of coding, computationally ways of designing. A Creative Coding course at Polimi.">
-  <meta property="og:image" content="">
+  <meta property="og:image" content="https://raw.githubusercontent.com/drawwithcode/2020/master/og-image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
